<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/widget46"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout>

            <Button
                android:id="@+id/btAdicionar"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginLeft="3dp"
                android:background="@null"
                android:drawableTop="@drawable/add" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/btAdicionar"
                android:text="@string/cadregistrotitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>

        <TableRow>

            <TextView
                android:id="@+id/tvTipo"
                android:layout_width="200dp"
                android:text="@string/tipo" />
        </TableRow>

        <TableRow>

            <Spinner
                android:id="@+id/spTipo"
                android:prompt="@string/tipoRegistro" />
        </TableRow>

        <TableRow
            android:id="@+id/trMedicamentosTv"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tvMedicamento"
                android:layout_width="200dp"
                android:text="@string/medicamento" />

        </TableRow>

        <TableRow
            android:id="@+id/trMedicamentos"
            android:visibility="gone" >

            <Spinner
                android:id="@+id/spMedicamentos"
                android:layout_width="200dp"
                android:prompt="@string/tipoMedicamento" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvDataHora"
                android:text="@string/datahora" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btData"
                android:text="@string/data" />

            <Button
                android:id="@+id/btHora"
                android:layout_width="100dp"
                android:text="@string/hora" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvCategoria"
                android:text="@string/categoria" />
        </TableRow>

        <TableRow>

            <Spinner
                android:id="@+id/spCategoria"
                android:prompt="@string/tipoCategoria" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvValor"
                android:text="@string/valor" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/etValor"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tvUnidade"
                android:gravity="center"
                android:text="@string/qtde" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btSalvar"
                android:text="@string/salvar" />
        </TableRow>
    </TableLayout>

</ScrollView>