<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/widget46"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <Button
            android:id="@+id/btRelatoriosPacientes"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:text="@string/selecpaciente"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btAddPaciente"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:text="@string/addpaciente"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btConfiguracoes"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:text="@string/configuracoes"
            android:textSize="24dp" />
    </TableLayout>

</ScrollView>