<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/widget46"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btNada"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null" />

        <RelativeLayout>

            <Button
                android:id="@+id/btEditar"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="50dp"
                android:background="@null"
                android:drawableTop="@drawable/edit"
                android:text="@string/editar"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btAdicionar"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="50dp"
                android:background="@null"
                android:drawableTop="@drawable/add"
                android:text="@string/adicionar"
                android:textSize="12dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btNada2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null" />

        <RelativeLayout>

            <Button
                android:id="@+id/btGraficos"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="50dp"
                android:background="@null"
                android:drawableTop="@drawable/chart"
                android:text="@string/graficos"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btRelatorios"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="50dp"
                android:background="@null"
                android:drawableTop="@drawable/report"
                android:text="@string/relatorios"
                android:textSize="12dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btNada3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null" />

        <RelativeLayout>

            <Button
                android:id="@+id/btConfiguracoes"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:background="@null"
                android:drawableTop="@drawable/application"
                android:text="@string/configuracoes"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btCadastrarPaciente"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="58dp"
                android:background="@null"
                android:drawableTop="@drawable/user_add"
                android:text="@string/cadpaciente"
                android:textSize="12dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btNada4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="15dp" >

            <TextView
                android:id="@+id/tvUltimoReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/hoje"
                android:textSize="13dip" />

            <TextView
                android:id="@+id/tvOntem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/ontem"
                android:textSize="13dip" />

            <TextView
                android:id="@+id/tvSemana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/semana"
                android:textSize="13dip" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="68dp" >

            <TextView
                android:id="@+id/etvUltimoReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/traco"
                android:textSize="15dip" />

            <TextView
                android:id="@+id/etvOntem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/traco"
                android:textSize="15dip" />

            <TextView
                android:id="@+id/etvSemana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/traco"
                android:textSize="15dip" />
        </RelativeLayout>
    </TableLayout>

</ScrollView>